--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -59,6 +59,28 @@ jobs:
           echo "Percent of processors used: ${PERCENT_USED}%"
           echo "total_cpus=$TOTAL_CPUS" >> $GITHUB_OUTPUT
           echo "percent_used=$PERCENT_USED" >> $GITHUB_OUTPUT
+      # 2️. Download Amazon dataset from GitHub Release
+      - name: Fetch data.pkl from GitHub Release
+        run: |
+          echo " Downloading amazon0302.pkl from GitHub Releases..."
+          wget -O data.pkl https://github.com/abel149/neural-subgraph-matchminer_fork/releases/download/v1.0/data.pkl
+
+          echo " Verifying downloaded file..."
+          file data.pkl
+
+          FILE_SIZE=$(stat -c%s amazon0302.pkl)
+          echo "File size: $FILE_SIZE bytes"
+
+          if [ $FILE_SIZE -lt 100000 ]; then
+            echo " ERROR: data.pkl is too small. Likely not downloaded correctly!"
+            exit 1
+          fi
+
+          if file amazon0302.pkl | grep -Eq "HTML|ASCII|Unicode"; then
+            echo " ERROR: data.pkl is not a valid binary file!"
+            exit 1
+          fi
+          echo " data.pkl verified as binary."
 
       - name: Run decoder in Docker container
         run: |
@@ -70,7 +92,7 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=data.pkl \
+                --dataset=/app/data.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
