test the counter with anchor with label property

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -116,7 +116,11 @@ jobs:
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
                 --graph_type directed \
-                --node_anchored
+                --node_anchored \
+                --anchor_use_label \
+                --anchor_degree_tolerance 0.2 \
+                --batch_size 500 \
+                --val_size 128
               echo 'Counting completed.'
               ls -la /app/results
             "
