--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -96,7 +96,7 @@ jobs:
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
-            
+                --graph_type=directed
               echo 'Checking output directories...'
               ls -la /app/plots/cluster
               ls -la /app/results
