--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -92,11 +92,11 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=test_target_directed_small_portable.pkl \
+                --dataset=metta.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
-                --graph_type=directed
+                
               echo 'Checking output directories...'
               ls -la /app/plots/cluster
               ls -la /app/results
@@ -112,11 +112,11 @@ jobs:
               export PYTHONPATH=/app
               echo 'Running pattern counter...'
               python -m analyze.count_patterns \
-                --dataset=test_target_directed_small_portable.pkl \
+                --dataset=metta.pkl \
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
                 --node_anchored \
-                --graph_type directed \
+                --graph_type undirected \
                 
                 
                 
