--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -92,10 +92,11 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=metta.pkl \
+                --dataset=test_target_directed_small_portable.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
+                --graph_type=directed
                 
               echo 'Checking output directories...'
               ls -la /app/plots/cluster
@@ -112,11 +113,11 @@ jobs:
               export PYTHONPATH=/app
               echo 'Running pattern counter...'
               python -m analyze.count_patterns \
-                --dataset=metta.pkl \
+                --dataset=test_target_directed_small_portable.pkl \
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
                 --node_anchored \
-                --graph_type undirected \
+                --graph_type directed \
                 
                 
                 
