--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -116,8 +116,7 @@ jobs:
                 --dataset=test_100n_200e.pkl \
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
-                --node_anchored \
-                --graph_type directed \
+                --graph_type=directed \
                 
                 
                 
