Update run.yml to use node anchored option in decoder execution

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -116,7 +116,7 @@ jobs:
                 --dataset=test_100n_200e.pkl \
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
-                --graph_type=directed \
+                --node_anchored \
                 
                 
                 
