--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -92,7 +92,7 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=metta.pkl \
+                --dataset=test_100n_200e.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
@@ -112,7 +112,7 @@ jobs:
               export PYTHONPATH=/app
               echo 'Running pattern counter...'
               python -m analyze.count_patterns \
-                --dataset=metta.pkl \
+                --dataset=test_100n_200e.pkl \
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
                 --node_anchored \
