--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -92,11 +92,11 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=test_100n_200e.pkl \
+                --dataset=test_target_directed_small_portable.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
-                
+                -graph_type=directed \
               echo 'Checking output directories...'
               ls -la /app/plots/cluster
               ls -la /app/results
@@ -112,10 +112,11 @@ jobs:
               export PYTHONPATH=/app
               echo 'Running pattern counter...'
               python -m analyze.count_patterns \
-                --dataset=test_100n_200e.pkl \
+                --dataset=test_target_directed_small_portable.pkl \
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
                 --node_anchored \
+                -graph_type=directed \
 
               echo 'Counting completed.'
               ls -la /app/results
