--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -96,8 +96,8 @@ jobs:
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
-                -graph_type=directed 
-                
+                --graph_type=directed 
+
               echo 'Checking output directories...'
               ls -la /app/plots/cluster
               ls -la /app/results
@@ -117,7 +117,7 @@ jobs:
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
                 --node_anchored \
-                -graph_type=directed \
+                --graph_type=directed \
 
               echo 'Counting completed.'
               ls -la /app/results
