--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -92,11 +92,12 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=test_target_directed_small_portable.pkl \
+                --dataset=directed.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
-                --graph_type=directed 
+                --graph_type=directed \
+                
 
               echo 'Checking output directories...'
               ls -la /app/plots/cluster
@@ -113,15 +114,13 @@ jobs:
               export PYTHONPATH=/app
               echo 'Running pattern counter...'
               python -m analyze.count_patterns \
-                --dataset=test_target_directed_small_portable.pkl \
+                --dataset=directed.pkl \
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
                 --node_anchored \
                 --graph_type=directed \
+                --use_sampling=true
 
-              echo 'Counting completed.'
-              ls -la /app/results
-            "
       # - name: Run matcher in Docker container
       #  run: |
       #   docker run --rm \
