Add igraph engine support for graph matching and conversion from NetworkX

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -115,7 +115,8 @@ jobs:
                 --dataset=metta.pkl \
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
-                --node_anchored 
+                --node_anchored \
+                --engine=igraph
               
               echo 'Counting completed.'
               ls -la /app/results
