Test the current counter with metta.pkl

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -70,7 +70,7 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=directed.pkl \
+                --dataset=metta.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
@@ -79,26 +79,7 @@ jobs:
               ls -la /app/plots/cluster
               ls -la /app/results
               "
-      # - name: Run pattern counter in Docker container
-      #   run: |
-      #     docker run --rm \
-      #       -v ${{ github.workspace }}:/app \
-      #       -e PYTHONUNBUFFERED=1 \
-      #       decoder-image:latest \
-      #       bash -c "
-      #         set -e
-      #         export PYTHONPATH=/app
-      #         echo 'Running pattern counter...'
-      #         python -m analyze.count_patterns \
-      #           --dataset=graph.pkl \
-      #           --queries_path=results/patterns.pkl \
-      #           --out_path=results/ \
-      #           --node_anchored \
-      #           --preserve_labels
-      #         echo 'Counting completed.'
-      #         ls -la /app/results
-      #       "
-      - name: Run matcher in Docker container
+      - name: Run pattern counter in Docker container
         run: |
           docker run --rm \
             -v ${{ github.workspace }}:/app \
@@ -106,17 +87,36 @@ jobs:
             decoder-image:latest \
             bash -c "
               set -e
-              echo 'Starting matcher run on custom gene graph...'
-              python -m subgraph_matching.train \
-                --dataset=graph \
-                --graph_pkl_path=graph.pkl \
+              export PYTHONPATH=/app
+              echo 'Running pattern counter...'
+              python -m analyze.count_patterns \
+                --dataset=metta.pkl \
+                --queries_path=results/patterns.pkl \
+                --out_path=results/ \
                 --node_anchored \
-                --batch_size 16 \
-                --val_size 128
-              echo 'Checking output directories...'
+                --preserve_labels
+              echo 'Counting completed.'
               ls -la /app/results
-              ls -la /app/plots
             "
+      # - name: Run matcher in Docker container
+      #   run: |
+      #     docker run --rm \
+      #       -v ${{ github.workspace }}:/app \
+      #       -e PYTHONUNBUFFERED=1 \
+      #       decoder-image:latest \
+      #       bash -c "
+      #         set -e
+      #         echo 'Starting matcher run on custom gene graph...'
+      #         python -m subgraph_matching.train \
+      #           --dataset=graph \
+      #           --graph_pkl_path=graph.pkl \
+      #           --node_anchored \
+      #           --batch_size 16 \
+      #           --val_size 128
+      #         echo 'Checking output directories...'
+      #         ls -la /app/results
+      #         ls -la /app/plots
+      #       "
       - name: Check for generated files
         run: |
           echo "Checking plots directory:"
