--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -55,6 +55,28 @@ jobs:
           echo "Percent of processors used: ${PERCENT_USED}%"
           echo "total_cpus=$TOTAL_CPUS" >> $GITHUB_OUTPUT
           echo "percent_used=$PERCENT_USED" >> $GITHUB_OUTPUT
+      #Download Amazon dataset from GitHub Release
+      - name: Fetch data.pkl from GitHub Release
+        run: |
+          echo " Downloading data.pkl from GitHub Releases..."
+          wget -O data.pkl https://github.com/abel149/neural-subgraph-matchminer_fork/releases/download/v1.1/data.pkl
+
+          echo " Verifying downloaded file..."
+          file data.pkl
+
+          FILE_SIZE=$(stat -c%s data.pkl)
+          echo "File size: $FILE_SIZE bytes"
+
+          if [ $FILE_SIZE -lt 100000 ]; then
+            echo " ERROR: data.pkl is too small. Likely not downloaded correctly!"
+            exit 1
+          fi
+
+          if file data.pkl | grep -Eq "HTML|ASCII|Unicode"; then
+            echo " ERROR: data.pkl is not a valid binary file!"
+            exit 1
+          fi
+          echo " data.pkl verified as binary."
 
       - name: Run decoder in Docker container
         run: |
@@ -70,7 +92,9 @@ jobs:
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
-                --graph_type=directed
+                
+
+
               echo 'Checking output directories...'
               ls -la /app/plots/cluster
               ls -la /app/results
@@ -91,7 +115,8 @@ jobs:
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
                 --node_anchored \
-                --preserve_labels
+                --engine=igraph
+              
               echo 'Counting completed.'
               ls -la /app/results
             "
@@ -115,7 +140,6 @@ jobs:
       #ls -la /app/results
       # ls -la /app/plots
       #"
-
       #         echo 'Starting matcher run on custom gene graph...'
       #         python -m subgraph_matching.train \
       #           --dataset=graph \
