Update GitHub Actions workflow to include engine

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   run-decoder:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -59,6 +59,28 @@ jobs:
           echo "Percent of processors used: ${PERCENT_USED}%"
           echo "total_cpus=$TOTAL_CPUS" >> $GITHUB_OUTPUT
           echo "percent_used=$PERCENT_USED" >> $GITHUB_OUTPUT
+      #Download Amazon dataset from GitHub Release
+      - name: Fetch data.pkl from GitHub Release
+        run: |
+          echo " Downloading data.pkl from GitHub Releases..."
+          wget -O data.pkl https://github.com/abel149/neural-subgraph-matchminer_fork/releases/download/v1.1/data.pkl
+
+          echo " Verifying downloaded file..."
+          file data.pkl
+
+          FILE_SIZE=$(stat -c%s data.pkl)
+          echo "File size: $FILE_SIZE bytes"
+
+          if [ $FILE_SIZE -lt 100000 ]; then
+            echo " ERROR: data.pkl is too small. Likely not downloaded correctly!"
+            exit 1
+          fi
+
+          if file data.pkl | grep -Eq "HTML|ASCII|Unicode"; then
+            echo " ERROR: data.pkl is not a valid binary file!"
+            exit 1
+          fi
+          echo " data.pkl verified as binary."
 
       - name: Run decoder in Docker container
         run: |
@@ -74,7 +96,9 @@ jobs:
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
-                --graph_type=directed
+                
+
+
               echo 'Checking output directories...'
               ls -la /app/plots/cluster
               ls -la /app/results
@@ -94,29 +118,30 @@ jobs:
                 --queries_path=results/patterns.pkl \
                 --out_path=results/ \
                 --node_anchored \
-                --preserve_labels
+                --engine=igraph
+              
               echo 'Counting completed.'
               ls -la /app/results
             "
       # - name: Run matcher in Docker container
-      #   run: |
-      #     docker run --rm \
-      #       -v ${{ github.workspace }}:/app \
-      #       -e PYTHONUNBUFFERED=1 \
-      #       decoder-image:latest \
-      #       bash -c "
-      #         set -e
-      #         echo 'Starting matcher run on custom gene graph...'
-      #         python -m subgraph_matching.train \
-      #           --dataset=graph \
-      #           --graph_pkl_path=graph.pkl \
-      #           --node_anchored \
-      #           --batch_size 16 \
-      #           --val_size 128
-      #         echo 'Checking output directories...'
-      #         ls -la /app/results
-      #         ls -la /app/plots
-      #       "
+      #  run: |
+      #   docker run --rm \
+      #    -v ${{ github.workspace }}:/app \
+      #   -e PYTHONUNBUFFERED=1 \
+      #  decoder-image:latest \
+      # bash -c "
+      #  set -e
+      # echo 'Starting matcher run on custom gene graph...'
+      #ython -m subgraph_matching.train \
+      # --dataset=graph \
+      #--graph_pkl_path=graph.pkl \
+      #--node_anchored \
+      #--batch_size 16 \
+      #--val_size 128
+      #echo 'Checking output directories...'
+      #ls -la /app/results
+      # ls -la /app/plots
+      #"
       - name: Check for generated files
         run: |
           echo "Checking plots directory:"
