--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   run-decoder:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -24,7 +24,6 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-
       - name: Build Docker image
         uses: docker/build-push-action@v4
         with:
@@ -35,19 +34,16 @@ jobs:
             type=local,src=/tmp/.buildx-cache
           cache-to: |
             type=local,dest=/tmp/.buildx-cache-new,mode=max
-
       - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
       - name: Create output directories
         run: |
           mkdir -p ${{ github.workspace }}/plots/cluster
           mkdir -p ${{ github.workspace }}/results
           chmod -R 777 ${{ github.workspace }}/plots
           chmod -R 777 ${{ github.workspace }}/results
-
       - name: Check available processors and usage percentage
         id: cpu-check
         run: |
@@ -59,7 +55,6 @@ jobs:
           echo "Percent of processors used: ${PERCENT_USED}%"
           echo "total_cpus=$TOTAL_CPUS" >> $GITHUB_OUTPUT
           echo "percent_used=$PERCENT_USED" >> $GITHUB_OUTPUT
-
       - name: Run decoder in Docker container
         run: |
           docker run --rm \
@@ -70,7 +65,7 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=directed.pkl \
+                --dataset=pip.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
@@ -98,32 +93,31 @@ jobs:
       #         echo 'Counting completed.'
       #         ls -la /app/results
       #       "
-      - name: Run matcher in Docker container
-        run: |
-          docker run --rm \
-            -v ${{ github.workspace }}:/app \
-            -e PYTHONUNBUFFERED=1 \
-            decoder-image:latest \
-            bash -c "
-              set -e
-              echo 'Starting matcher run on custom gene graph...'
-              python -m subgraph_matching.train \
-                --dataset=graph \
-                --graph_pkl_path=graph.pkl \
-                --node_anchored \
-                --batch_size 16 \
-                --val_size 128
-              echo 'Checking output directories...'
-              ls -la /app/results
-              ls -la /app/plots
-            "
+      # - name: Run matcher in Docker container
+      #  run: |
+      #   docker run --rm \
+      #    -v ${{ github.workspace }}:/app \
+      #   -e PYTHONUNBUFFERED=1 \
+      #  decoder-image:latest \
+      # bash -c "
+      #  set -e
+      # echo 'Starting matcher run on custom gene graph...'
+      #ython -m subgraph_matching.train \
+      # --dataset=graph \
+      #--graph_pkl_path=graph.pkl \
+      #--node_anchored \
+      #--batch_size 16 \
+      #--val_size 128
+      #echo 'Checking output directories...'
+      #ls -la /app/results
+      # ls -la /app/plots
+      #"
       - name: Check for generated files
         run: |
           echo "Checking plots directory:"
           ls -R plots/ || echo "No plots directory found"
           echo "Checking results directory:"
           ls -R results/ || echo "No results directory found"
-
       - name: Upload plots as artifact
         if: always()
         uses: actions/upload-artifact@v4
