--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -31,6 +31,7 @@ jobs:
           context: .
           load: true
           tags: decoder-image:latest
+          no-cache: true
           cache-from: |
             type=local,src=/tmp/.buildx-cache
           cache-to: |
@@ -59,6 +60,28 @@ jobs:
           echo "Percent of processors used: ${PERCENT_USED}%"
           echo "total_cpus=$TOTAL_CPUS" >> $GITHUB_OUTPUT
           echo "percent_used=$PERCENT_USED" >> $GITHUB_OUTPUT
+      #Download Amazon dataset from GitHub Release
+      - name: Fetch data.pkl from GitHub Release
+        run: |
+          echo " Downloading data.pkl from GitHub Releases..."
+          wget -O data.pkl https://github.com/abel149/neural-subgraph-matchminer_fork/releases/download/v1.1/data.pkl
+
+          echo " Verifying downloaded file..."
+          file data.pkl
+
+          FILE_SIZE=$(stat -c%s data.pkl)
+          echo "File size: $FILE_SIZE bytes"
+
+          if [ $FILE_SIZE -lt 100000 ]; then
+            echo " ERROR: data.pkl is too small. Likely not downloaded correctly!"
+            exit 1
+          fi
+
+          if file data.pkl | grep -Eq "HTML|ASCII|Unicode"; then
+            echo " ERROR: data.pkl is not a valid binary file!"
+            exit 1
+          fi
+          echo " data.pkl verified as binary."
 
       - name: Run decoder in Docker container
         run: |
@@ -70,13 +93,11 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=metta.pkl \
+                --dataset=directed.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
                 
-
-
               echo 'Checking output directories...'
               ls -la /app/plots/cluster
               ls -la /app/results
@@ -99,16 +120,16 @@ jobs:
                 --use_neighborhood \
                 --k_hops 2 \
                 --degree_aware_sampling \
-                --sample_anchors 500 \
+                --sample_anchors 100 \
                 --engine igraph \
                 --n_workers 4 \
-                --batch_size 100 \
+                --batch_size 50 \
                 --timeout 60 \
                 --graph_type directed
 
-            echo 'Counting completed.'
-            ls -la /app/results
-          "
+              echo 'Counting completed.'
+              ls -la /app/results
+            "
       # - name: Run matcher in Docker container
       #  run: |
       #   docker run --rm \
