--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -97,6 +97,7 @@ jobs:
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
+                --graph_type directed 
                 
               echo 'Checking output directories...'
               ls -la /app/plots/cluster
@@ -118,7 +119,7 @@ jobs:
                 --out_path=results/counts.json \
                 --node_anchored \
                 --degree_aware_sampling \
-                --sample_anchors 200 \
+                --sample_anchors 1000 \
                 --engine nx \
                 --n_workers 4 \
                 --batch_size 50 \
