Test the optimizaed counter with metta.pkl

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -93,7 +93,7 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=directed.pkl \
+                --dataset=metta.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
@@ -114,7 +114,7 @@ jobs:
               export PYTHONPATH=/app
               echo 'Running optimized pattern counter...'
               python -m analyze.count_patterns \
-                --dataset=directed.pkl \
+                --dataset=metta.pkl \
                 --queries_path=results/patterns.pkl \
                 --out_path=results/counts.json \
                 --node_anchored \
