Enhance pattern counter execution: with the optimized code

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -118,8 +118,15 @@ jobs:
                 --queries_path=results/patterns.pkl \
                 --out_path=results/counts.json \
                 --node_anchored \
+                --use_neighborhood \
+                --k_hops 4 \
+                --degree_aware_sampling \
+                --sample_anchors 2000 \
+                --engine igraph \
+                --n_workers 4 \
                 
-              
+                
+                
 
               echo 'Counting completed.'
               ls -la /app/results
