Add coustom dataset

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -93,7 +93,7 @@ jobs:
               set -e
               echo 'Starting decoder run...'
               python -m subgraph_mining.decoder \
-                --dataset=directed.pkl \
+                --dataset=social_network.pkl \
                 --n_trials=200 \
                 --node_anchored \
                 --out_path=/app/results/patterns.pkl \
@@ -114,14 +114,14 @@ jobs:
               export PYTHONPATH=/app
               echo 'Running optimized pattern counter...'
               python -m analyze.count_patterns \
-                --dataset=directed.pkl \
+                --dataset=social_network.pkl \
                 --queries_path=results/patterns.pkl \
                 --out_path=results/counts.json \
                 --node_anchored \
                 --use_neighborhood \
                 --k_hops 4 \
                 --degree_aware_sampling \
-                --sample_anchors 2000 \
+                --sample_anchors 1000 \
                 --n_workers 4 \
                 --graph_type directed
                 
